--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ https://templatemo.com/tm-580-woox-travel
                     </div>
                     <div class="col-lg-8 col-sm-7">
                       <div class="right-content">
-                        <h4>SWITZERLAND</h4>
+                        <h4>KLATEN TENGAH</h4>
                         <span>Hotel Merak Indah Klaten</span>
                         <div class="main-button">
                           <a href="about.html">Explore More</a>
@@ -292,7 +292,7 @@ https://templatemo.com/tm-580-woox-travel
                     </div>
                     <div class="col-lg-8 col-sm-7">
                       <div class="right-content">
-                        <h4>CARIBBEAN</h4>
+                        <h4>KLATEN TENGAH</h4>
                         <span>Tjokro Hotel Klaten</span>
                         <div class="main-button">
                           <a href="about.html">Explore More</a>
@@ -321,7 +321,7 @@ https://templatemo.com/tm-580-woox-travel
                     </div>
                     <div class="col-lg-8 col-sm-7">
                       <div class="right-content">
-                        <h4>FRANCE</h4>
+                        <h4>JOGONAKAN KLATEN</h4>
                         <span>Hotel Gendhis Saraswati</span>
                         <div class="main-button">
                           <a href="about.html">Explore More</a>
